# ccl-ci-test

./: .gitmodules  buildnumber.h  buildtime.h  readme.md  repo.json
.github/ci/android/: prepare_build_environment.sh  prepare_sdk_environment.sh  run_gradle_task.sh
.github/ci/linux/: build_cmake_target.sh  configure_cmake_project.sh  prepare_build_environment.sh  prepare_sdk_environment.sh
.github/ci/linux/prepare-build-environment/: action.yml
.github/ci/mac/: build_sdk.sh  build_tools.sh  configure_system.sh  prepare_sdk_environment.sh  setup_keychain.sh
.github/ci/mac/execute-build-script/: action.yml
.github/ci/shared/: prepare_workingcopy.sh
.github/ci/win/: build-cmake-target.yml  build_cmake_target.sh  build_sdk.sh  prepare-build-environment.yml  prepare_build_environment.sh  prepare_sdk_environment.sh  prepare_signing.sh  pull_container.sh
.github/ci/win/build-cmake-target/: action.yml
.github/ci/win/prepare-build-environment/: action.yml
.github/workflows/: ccl-sdk-android.yml  ccl-sdk-container.yml  ccl-sdk-documentation.yml  ccl-sdk-linux.yml  ccl-sdk-mac.yml  ccl-sdk-win.yml  ccl-sdk.yml  ccl-tools-linux.yml  ccl-tools-mac.yml  ccl-tools-win.yml  ccl-tools.yml
development/: readme.md
development/cmake/: CMakeLists.txt  CMakePresets.json  sdk.android.cmake  sdk.linux.cmake  sdk.mac.cmake  sdk.win.cmake  sdkmacros.cmake
development/packaging/android/: AndroidManifest.xml  ccl-targets.patch
development/packaging/android/resource/values/: strings.xml
development/packaging/ios/: build_applications.sh
development/packaging/mac/: build_applications.sh  build_core_tools.sh  build_public_tools.sh  build_sdk.sh  build_tools.sh  codesign.sh  notarize.sh
development/packaging/resource/: license.txt
development/packaging/win/nsis/: sdk-installer.nsis.in
patches/: linux-vulkan.patch  macos-sdk.patch  windows-signing.patch
signing/ccl/: signing.cmake
